--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^4.4.0",
     "chartjs-plugin-zoom": "^2.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
