--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.1",
+    "axios": "^1.6.3",
     "chart.js": "^4.4.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-zoom": "^2.0.1",
@@ -18,6 +18,7 @@
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
