--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-select-virtualized": "^5.5.1",
     "react-window": "^1.8.10",
     "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
