--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^4.4.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-zoom": "^2.0.1",
+    "d3": "^7.8.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-select": "^5.8.0",
     "react-select-virtualized": "^5.5.1",
     "react-window": "^1.8.10",
+    "recharts": "^2.10.3",
     "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
