--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-zoom": "^2.0.1",
     "d3": "^7.8.5",
+    "plotly.js": "^2.27.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-plotly.js": "^2.6.0",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
