--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@juggle/resize-observer": "^3.4.0",
     "@material-tailwind/react": "^2.1.8",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
@@ -13,6 +14,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-zoom": "^2.0.1",
     "d3": "^7.8.5",
+    "echarts": "^5.4.3",
     "plotly.js": "^2.27.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -26,7 +28,8 @@
     "react-window": "^1.8.10",
     "recharts": "^2.10.3",
     "redux": "^4.2.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zingchart-react": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
